k3s/kubernetes-dashboard/kd-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kd-loadbalancer
  namespace: kubernetes-dashboard
spec:
  type: LoadBalancer
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
