k3s/kubernetes-dashboard/kd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kd-service
  namespace: kubernetes-dashboard
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    k8s-app: kubernetes-dashboard
