k3s/kubernetes-dashboard/kd-ingress-prd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kd-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/default-backend	: "kubernetes-dashboard"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - dashboard-192-168-0-128.nip.io
    secretName: "dashboard-192-168-0-128.nip.io-prod-tls"
  rules:
  - host: dashboard-192-168-0-128.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard 
            port:
              number: 443
