k3s/kubernetes-dashboard/kd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kd-ingress
  namespace: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dashboard.192.168.0.128.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard 
            port:
              number: 443
